<resources>
    <string name="app_name">BaseProject</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_your_registered_email_address_you_will_receive_a_otp">Please enter your registered Email address You will receive a OTP.</string>
    <string name="enter_your_email_and_new_password">Enter your email and new password</string>
    <string name="email">Email</string>
    <string name="don_t_have_to_change_password">Don\'t have to change password</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>


    <integer-array name="progress_colors">
        <item>@color/white</item>
        <item>@color/red</item>
        <item>@color/yellow</item>
        <item>@color/dark_green</item>
        <item>@color/orange</item>
    </integer-array>
</resources>