<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onBoarding.changepassword.ChangePasswordFragment">

<data>
    <import type="android.view.View"/>
    <variable
        name="changeViewModel"
        type="com.example.baseproject.ui.onBoarding.changepassword.ChangePasswordViewModel" />
</data>
<ScrollView
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#C0C0C0"
android:scaleType="fitXY">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_forgetpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image"
            android:layout_marginTop="@dimen/dp96"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvchangepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/enter_your_email_and_new_password"
            android:textSize="@dimen/sp15"
            android:layout_marginTop="@dimen/dp20"
            app:layout_constraintTop_toBottomOf="@id/iv_forgetpass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextEmail"
            android:layout_width="@dimen/TextInputLayout_width"
            android:layout_height="@dimen/dp50"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#FD0303"
            android:layout_marginStart="@dimen/TextInputLayout_margin"
            android:layout_marginEnd="@dimen/TextInputLayout_margin"
            android:layout_marginTop="@dimen/dp30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvchangepass"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/et_signupemail"
                android:layout_width="@dimen/dp302"
                android:layout_height="match_parent"
                android:textSize="@dimen/sp12"
                android:hint="@string/email"
                android:text="@={changeViewModel.changeEmail}"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingTop="@dimen/dp10"
                android:paddingStart="@dimen/tv_drawable_padding"
                android:drawablePadding="@dimen/tv_drawable_padding"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:background="@drawable/custombutton"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextPassword"
            android:layout_width="@dimen/TextInputLayout_width"
            android:layout_height="@dimen/dp50"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="#FD0303"
            android:layout_marginStart="@dimen/TextInputLayout_margin"
            android:layout_marginEnd="@dimen/TextInputLayout_margin"
            android:layout_marginTop="@dimen/dp26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filledTextEmail"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/et_signuppassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp12"
                android:hint="@string/password"
                android:maxLength="20"
                android:inputType="textPassword"
                android:paddingTop="@dimen/tv_drawable_padding"
                android:text="@={changeViewModel.changePassword}"
                android:paddingBottom="@dimen/tv_drawable_padding"
                android:drawablePadding="@dimen/tv_drawable_padding"
                android:paddingStart="@dimen/tv_drawable_padding"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:background="@drawable/custombutton"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_signupbutton"
            android:layout_width="@dimen/dp202"
            android:layout_height="@dimen/dp45"
            android:layout_marginStart="@dimen/dp80"
            android:layout_marginEnd="@dimen/dp80"
            android:layout_marginTop="@dimen/dp35"
            android:text="@string/change_password"
            android:onClick="@{() -> changeViewModel.update(changeViewModel.changePassword,changeViewModel.changeEmail)}"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/button_bg"
            app:layout_constraintTop_toBottomOf="@id/filledTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_to_change_password"
            android:layout_marginTop="@dimen/dp20"
            android:textSize="@dimen/sp15"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/tv_signupbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>